// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputRange should render invalid 1`] = `
<DocumentFragment>
  <fieldset
    class="FormField__FormFieldStyled-yeauwd-0 qzrKg flex flex-col space-y-2"
  >
    <div
      class="relative"
    >
      <div
        class="Input__InputWrapperStyled-wu99qs-0 iXDeQC"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            aria-invalid="true"
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="InputCurrency"
            name="test"
            type="text"
            value="2"
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
        >
          <span
            data-errortext="test"
            data-testid="Input__error"
          >
            <div
              class="sc-bdfBwQ iyevwF text-theme-danger-500"
              height="20"
              width="20"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </span>
        </div>
      </div>
      <div
        class="absolute bottom-0 px-1 w-full"
      >
        <div
          class="flex flex-wrap justify-center"
          data-testid="Range"
        >
          <div
            class="Range__Track-sc-10itqc2-0 sgjTD"
            data-testid="Range__track"
            style="transform: scale(1); cursor: pointer;"
          >
            <div
              class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
              data-testid="Range__track__filled"
            >
              <div
                aria-valuemax="10"
                aria-valuemin="2"
                aria-valuenow="2"
                class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                data-testid="Range__thumb"
                draggable="false"
                role="slider"
                style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`InputRange should render when disabled 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="Input__InputWrapperStyled-wu99qs-0 bPzSMW"
      disabled=""
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
          data-testid="InputCurrency"
          disabled=""
          type="text"
          value="5"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputRange should render with default value 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="InputCurrency"
          type="text"
          value="5"
        />
      </div>
    </div>
    <div
      class="absolute bottom-0 px-1 w-full"
    >
      <div
        class="flex flex-wrap justify-center"
        data-testid="Range"
      >
        <div
          class="Range__Track-sc-10itqc2-0 sgjTD"
          data-testid="Range__track"
          style="transform: scale(1); cursor: pointer;"
        >
          <div
            class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
            data-testid="Range__track__filled"
          >
            <div
              aria-valuemax="10"
              aria-valuemin="0"
              aria-valuenow="5"
              class="Range__Thumb-sc-10itqc2-2 hXgqqU"
              data-testid="Range__thumb"
              draggable="false"
              role="slider"
              style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputRange should track background min value 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="Input__InputWrapperStyled-wu99qs-0 hDeOGV"
    >
      <div
        class="relative flex flex-1 h-full"
      >
        <input
          class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
          data-testid="InputCurrency"
          type="text"
          value="2"
        />
      </div>
    </div>
    <div
      class="absolute bottom-0 px-1 w-full"
    >
      <div
        class="flex flex-wrap justify-center"
        data-testid="Range"
      >
        <div
          class="Range__Track-sc-10itqc2-0 sgjTD"
          data-testid="Range__track"
          style="transform: scale(1); cursor: pointer;"
        >
          <div
            class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
            data-testid="Range__track__filled"
          >
            <div
              aria-valuemax="10"
              aria-valuemin="2"
              aria-valuenow="2"
              class="Range__Thumb-sc-10itqc2-2 hXgqqU"
              data-testid="Range__thumb"
              draggable="false"
              role="slider"
              style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
              tabindex="0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
